# django-celery-skeleton

./: .gitignore  Dockerfile  Makefile  README.md  celerybeat-schedule  docker-compose.yml  manage.py  pyproject.toml
django_celery_skeleton/: asgi.py  celery.py  settings.py  tasks.py  urls.py  views.py  wsgi.py
django_celery_skeleton/templates/: job.html  jobs.html  logs.html  skeleton.html
