[tool.poetry]
name = "django-celery-skeleton"
version = "0.1.0"
description = ""
authors = ["cyrus <cheenpo@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
django = "^5.2.1"
redis = "^6.1.0"
celery = "^5.5.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
